2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Don't distribute INSTALL.RCS.

	* README: Incorporate INSTALL.RCS.
	* Makefile.in (dist): Don't distribute INSTALL.RCS.
	* INSTALL.RCS: Delete file.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't distribute (now-defunct) conf.heg.

	* Makefile.in (dist): Remove "*.heg" from
	list of files to distribute in the src/ subdir.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[sec] Use `mkstemp' instead of `mktemp'.

	* configure.in (mktemp): Remove from `AC_CHECK_FUNCS_ONCE'.
	(mkstemp): Add to `AC_CHECK_FUNCS_ONCE'.

2010-03-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix omission bug: Distribute build-aux/abs-p.in, as well.

	This fixes the omission in commit:
	[build] Detect "absolute-filename-p" without compiling.

	* Makefile.in (dist): Distribute build-aux/abs-p.in.

2010-03-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add --help, --version handling for all programs.

	* build-aux/extract-help: New file.
	* Makefile.in (dist): Distribute build-aux/extract-help.
	Also, substitute package version into $d/src/rcsfreeze.sh.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Don't distribute rcs_func.ms.

	* rcs_func.ms: Delete file.
	* README: Update.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Don't distribute REFS.

	* REFS: Delete file.
	* Makefile.in (dist): Update.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Rename file CREDITS to AUTHORS.

	* AUTHORS: Rename from CREDITS; refill.
	* Makefile.in (dist): Update.

2010-03-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Detect "absolute-filename-p" without compiling.

	* build-aux/abs-p.in: New file.
	* configure.in: Add check for MS-DOS filenames.
	(WOE): New AC_DEFINE_UNQUOTED.
	(WOEMUX): New AC_DEFUN.
	(ABSFILENAMEGLOB): New AC_SUBST.
	(rcs_cv_slsl_is_sl): Use `WOEMUX'; rename local var.
	(build-aux/abs-p): New AC_CONFIG_FILES.

2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
