@@ -22,6 +22,20 @@ AC_INIT([GNU RCS],[5.8-dev],[bug-rcs@gnu.org])
 AC_CONFIG_HEADERS([src/auto-sussed.h])
 AC_CONFIG_AUX_DIR([build-aux])
 
+AC_ARG_ENABLE([compat2],
+ [AS_HELP_STRING([--enable-compat2],[enable reading of RCS 2.x
+   files (really ancient, prior to GNU RCS).  If you enable this,
+   consider hiring ttn to migrate your files to a format more
+   suited to this millenium!  (The file format output by RCS 2.x
+   became obsolete in 1982.)])])
+
+if test yes = "$enable_compat2"
+  then enable_compat2=1
+  else enable_compat2=0
+fi
+AC_DEFINE_UNQUOTED([COMPAT2],[$enable_compat2],
+  [Support reading RCS 2.x files?])
+
 # Set up simple `diff' test.
 echo 0 >conftest0
 echo 0 >conftest0c
